--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
         background-color: #4f58ab;
         color: white;
       }
-
       .header-row .box h1 {
         margin: 0;
       }
-
       .header-row .box ul {
         list-style: none;
         display: flex;
@@ -26,11 +24,9 @@
         padding: 0;
         margin: 0;
       }
-
       .header-row .box ul li {
         display: inline;
       }
-
       .header-row .box ul li a {
         text-decoration: none;
         color: antiquewhite;
@@ -46,17 +42,29 @@
       justify-content: center;
       padding: 20px;
       }
-      .box img {
+      #home {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.box img {
+  max-width: auto;
+  height: auto;
+  margin: 0;
+  padding-left:20%;
+}
+
+      /* .box img {
       max-width: 100%;
       height: auto;
       display: block;
       margin: auto;
       padding-left: 40%;;
-      }
+      } */
       .box h1 {
         font-size: 2.5rem;
       }
-
       .box p {
         font-size: 1.2rem; 
         text-align: left;
@@ -92,7 +100,7 @@
     </style>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="header-row"> 
         <div class="box"><h1>Harminder Kour</h1></div>
         <div class="box">
@@ -145,7 +153,7 @@
                 A secure banking system offering online transactions, balance tracking, and 
                 account management features.
               </p>
-              <a href="Tech web/temp20.html" target="_blank">View Project</a>
+              <a href="https://harminderkour.github.io/bank/">View Project</a>
             </div>
             <div class="box">
               <h3>E-commerce Site</h3>
@@ -153,7 +161,7 @@
                 A feature-rich online marketplace providing product listings, payment integration, 
                 and a user-friendly interface.
               </p>
-              <a href="Tech web/temp23.html" target="_blank">View Project</a>
+              <a href="https://harminderkour.github.io/mystore/" target="_blank">View Project</a>
             </div>
             </div>
         </div>
