--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harminder Kour</title>
     <link rel="icon" type="image/x-icon" href="assets/images/ball.png" />
+    <link href="styles.css" type="stylesheet">
     <style>
       .header-row {
         display: flex;
@@ -29,8 +30,9 @@
       }
       .header-row .box ul li a {
         text-decoration: none;
-        color: antiquewhite;
+        color: white;
         font-weight: bold;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
       }
       html {
         scroll-behavior: smooth;
@@ -43,18 +45,17 @@
       padding: 20px;
       }
       #home {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-.box img {
-  max-width: auto;
-  height: auto;
-  margin: 0;
-  padding-left:20%;
-}
-
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      }
+      .box img {
+      max-width: auto;
+      height: auto;
+      margin: 0;
+      /* padding-left:20%; */
+      }
       /* .box img {
       max-width: 100%;
       height: auto;
@@ -64,10 +65,12 @@
       } */
       .box h1 {
         font-size: 2.5rem;
+        font-family: Garamond;
       }
       .box p {
         font-size: 1.2rem; 
         text-align: left;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
       }
       button {
         padding: 10px 20px; 
